fix nav toggle button covering menu items on md/lg

--- a/_sass/_nav.sass
+++ b/_sass/_nav.sass
@@ -3,9 +3,6 @@
 
 // On smaller screens (but not smallest)
 @media (min-width: 576px)
-    .navbar-toggler-with-logo
-        position: absolute
-
     .navbar-brand
         display: block
         margin: auto
